added chekc mark buttons

--- a/AdvertiserAdGroup.html
+++ b/AdvertiserAdGroup.html
@@ -503,6 +503,9 @@
               <table id="campaignTable" class="min-w-full table-fixed rounded-md overflow-hidden tbl tbl-row-hover tbl-row-alt">
                 <thead class="tbl-head">
                   <tr>
+                    <th scope="col" class="w-10 px-3 py-2 text-center border-r border-gray-200">
+                      <input type="checkbox" id="selectAllCheckbox" class="w-4 h-4 accent-blue-600 cursor-pointer" title="Select All">
+                    </th>
                     <th scope="col" class="text-sm font-medium text-gray-700 uppercase tracking-wider border-r border-gray-200">
                       <button type="button" class="sort-btn flex w-full items-center px-6 py-2 space-x-2" data-sort-key="id">
                         <span>ID</span>
@@ -1652,7 +1655,7 @@
 
           if (data.length === 0) {
             const tr = document.createElement('tr');
-            tr.innerHTML = '<td colspan="5" class="px-6 py-4 text-center text-gray-500">No ad groups found</td>';
+            tr.innerHTML = '<td colspan="8" class="px-6 py-4 text-center text-gray-500">No ad groups found</td>';
             tbody.appendChild(tr);
             return;
           }
@@ -1661,21 +1664,22 @@
             const tr = document.createElement('tr');
             tr.className = 'hover:bg-gray-50';
             tr.innerHTML = `
+              <td class="px-3 py-1 text-center border-r border-gray-200">
+                <input type="checkbox" class="w-4 h-4 accent-blue-600 cursor-pointer row-select-checkbox" data-adgroup-id="${ag.id}">
+              </td>
               <td class="px-6 py-1 whitespace-nowrap text-sm text-gray-900 border-r border-gray-200">${ag.id || ''}</td>
-<td class="px-6 py-1 whitespace-nowrap text-sm font-medium text-gray-900 border-r border-gray-200">
-  <a href="./AdGroupDetails.html?id=${encodeURIComponent(ag.id)}&campaignId=${encodeURIComponent(ag.campaign || '')}" class="text-blue-600 hover:underline">
-  ${ag.name || ''}
-</a>
-</td>
+              <td class="px-6 py-1 whitespace-nowrap text-sm font-medium text-gray-900 border-r border-gray-200">
+                <a href="./AdGroupDetails.html?id=${encodeURIComponent(ag.id)}&campaignId=${encodeURIComponent(ag.campaign || '')}" class="text-blue-600 hover:underline">
+                  ${ag.name || ''}
+                </a>
+              </td>
               <td class="px-6 py-1 whitespace-nowrap text-sm text-gray-900 border-r border-gray-200">${(ag.connectors && ag.connectors.dsp) || ''}</td>
               <td class="px-6 py-1 whitespace-nowrap text-sm text-gray-900 border-r border-gray-200">${(ag.connectors && ag.connectors.adServer) || ''}</td>
               <td class="px-6 py-1 whitespace-nowrap text-sm text-gray-900 border-r border-gray-200">${ag.classification || ag.multiviewClassification || ''}</td>
-             <td class="px-6 py-1 whitespace-nowrap text-sm text-gray-900 border-r border-gray-200">${ag.campaign || ''}</td>
-<td class="px-6 py-1 whitespace-nowrap text-sm text-center border-r border-gray-200">
-  <button class="text-red-600 hover:underline" onclick="deleteAdGroup('${ag.id}')"
->Delete</button>
-</td>
-
+              <td class="px-6 py-1 whitespace-nowrap text-sm text-gray-900 border-r border-gray-200">${ag.campaign || ''}</td>
+              <td class="px-6 py-1 whitespace-nowrap text-sm text-center border-r border-gray-200">
+                <button class="text-red-600 hover:underline" onclick="deleteAdGroup('${ag.id}')">Delete</button>
+              </td>
             `;
             tbody.appendChild(tr);
           });
@@ -1717,6 +1721,46 @@
       };
 
       app.init();
+    });
+  </script>
+
+  <!-- Checkbox Selection Logic -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      const tableBody = document.getElementById('campaignTableBody');
+      const selectAllCheckbox = document.getElementById('selectAllCheckbox');
+
+      // Update select-all checkbox state based on row checkboxes
+      function updateSelectAllState() {
+        const rowCheckboxes = tableBody.querySelectorAll('.row-select-checkbox');
+        const checkedCount = tableBody.querySelectorAll('.row-select-checkbox:checked').length;
+        
+        if (checkedCount === 0) {
+          selectAllCheckbox.checked = false;
+          selectAllCheckbox.indeterminate = false;
+        } else if (checkedCount === rowCheckboxes.length) {
+          selectAllCheckbox.checked = true;
+          selectAllCheckbox.indeterminate = false;
+        } else {
+          selectAllCheckbox.checked = false;
+          selectAllCheckbox.indeterminate = true;
+        }
+      }
+
+      // Select-all checkbox handler
+      if (selectAllCheckbox) {
+        selectAllCheckbox.addEventListener('change', function() {
+          const rowCheckboxes = tableBody.querySelectorAll('.row-select-checkbox');
+          rowCheckboxes.forEach(cb => cb.checked = this.checked);
+        });
+      }
+
+      // Event delegation for dynamically rendered row checkboxes
+      tableBody.addEventListener('change', function(e) {
+        if (e.target.classList.contains('row-select-checkbox')) {
+          updateSelectAllState();
+        }
+      });
     });
   </script>
 
