--- a/CampaignsAdGroup.html
+++ b/CampaignsAdGroup.html
@@ -513,6 +513,9 @@
               <table id="campaignTable" class="min-w-full table-fixed rounded-md overflow-hidden tbl tbl-row-hover tbl-row-alt">
                 <thead class="tbl-head">
                   <tr>
+                    <th scope="col" class="w-10 px-3 py-2 text-center border-r border-gray-200">
+                      <input type="checkbox" id="selectAllCheckbox" class="w-4 h-4 accent-blue-600 cursor-pointer" title="Select All">
+                    </th>
                     <th scope="col" class="text-sm font-medium text-gray-700 uppercase tracking-wider border-r border-gray-200">
                       <button type="button" class="sort-btn flex w-full items-center px-6 py-2 space-x-2" data-sort-key="id">
                         <span>ID</span>
@@ -2364,7 +2367,7 @@ function loadAdGroupsForCampaign(campaignId) {
       // Show empty state
       const emptyRow = document.createElement('tr');
       emptyRow.innerHTML = `
-        <td colspan="7" class="px-6 py-4 text-center text-gray-500">
+        <td colspan="8" class="px-6 py-4 text-center text-gray-500">
           No ad groups for this campaign
         </td>
       `;
@@ -2375,6 +2378,9 @@ function loadAdGroupsForCampaign(campaignId) {
         const tr = document.createElement('tr');
         tr.className = 'hover:bg-gray-50';
         tr.innerHTML = `
+          <td class="px-3 py-1 text-center border-r border-gray-200">
+            <input type="checkbox" class="w-4 h-4 accent-blue-600 cursor-pointer row-select-checkbox" data-adgroup-id="${ag.id}">
+          </td>
           <td class="px-6 py-1 whitespace-nowrap text-sm text-gray-900 border-r border-gray-200">${ag.id || ''}</td>
           <td class="px-6 py-1 whitespace-nowrap text-sm font-medium text-gray-900 border-r border-gray-200">
             <a href="./AdGroupDetails.html?id=${encodeURIComponent(ag.id)}&campaignId=${encodeURIComponent(campaignId)}" class="text-blue-600 hover:underline">
@@ -2396,7 +2402,7 @@ function loadAdGroupsForCampaign(campaignId) {
     console.error('Error loading ad groups for campaign:', error);
     adGroupsTableBody.innerHTML = `
       <tr>
-        <td colspan="7" class="px-6 py-4 text-center text-gray-500">
+        <td colspan="8" class="px-6 py-4 text-center text-gray-500">
           Error loading ad groups
         </td>
       </tr>
@@ -2444,6 +2450,44 @@ window.addEventListener('adGroupsUpdated', () => {
     loadAdGroupsForCampaign(campaignId);
   }
 });
+
+// ========== CHECKBOX SELECTION LOGIC ==========
+(function() {
+  const tableBody = document.getElementById('campaignTableBody');
+  const selectAllCheckbox = document.getElementById('selectAllCheckbox');
+
+  // Update select-all checkbox state based on row checkboxes
+  function updateSelectAllState() {
+    const rowCheckboxes = tableBody.querySelectorAll('.row-select-checkbox');
+    const checkedCount = tableBody.querySelectorAll('.row-select-checkbox:checked').length;
+    
+    if (checkedCount === 0) {
+      selectAllCheckbox.checked = false;
+      selectAllCheckbox.indeterminate = false;
+    } else if (checkedCount === rowCheckboxes.length) {
+      selectAllCheckbox.checked = true;
+      selectAllCheckbox.indeterminate = false;
+    } else {
+      selectAllCheckbox.checked = false;
+      selectAllCheckbox.indeterminate = true;
+    }
+  }
+
+  // Select-all checkbox handler
+  if (selectAllCheckbox) {
+    selectAllCheckbox.addEventListener('change', function() {
+      const rowCheckboxes = tableBody.querySelectorAll('.row-select-checkbox');
+      rowCheckboxes.forEach(cb => cb.checked = this.checked);
+    });
+  }
+
+  // Event delegation for dynamically rendered row checkboxes
+  tableBody.addEventListener('change', function(e) {
+    if (e.target.classList.contains('row-select-checkbox')) {
+      updateSelectAllState();
+    }
+  });
+})();
 
 // ========== CREATE AD GROUP FUNCTIONALITY ==========
 
