--- a/AdvertiserAdGroup.html
+++ b/AdvertiserAdGroup.html
@@ -492,7 +492,7 @@
                   <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"/>
                   </svg>
-                  New Change Order
+                  Add to Change Order
                 </button>
                 <div class="w-1"></div>
               </div>
